2006-01-29  Anand Kumria  <wildfire@progsoc.org>

	* scripts/dpkg-source.pl (checkdiff): Ignore comments
	hunk header line as used by diff -p.

2006-01-29  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (do_help): Print the proper version giving
	it as an argument to printf, instead of printing 'VERSION'.

2006-01-29  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.13.14~.

2006-01-28  Frank Lichtenheld  <djpig@debian.org>

	* configure.ac: Release 1.13.13

2006-01-28  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-architecture.pl: Do not print the warning about a
	missmatch between gcc target machine type and GNU target system
	type if the actions are '-e' or '-i'.

2006-01-27  Frank Lichtenheld  <djpig@debian.org>

	* scripts/dpkg-shlibdeps.pl: Honor LD_LIBRARY_PATH when
	searching for shared libraries.
	* scripts/dpkg-shlibdeps.pl: Don't recurse into package
	directories when searching for local shlibs files.

2006-01-26  Zefram  <zefram@fysh.org>,
	    Guillem Jover  <guillem@debian.org>

	* man/C/dpkg-query.1: Document the correct format string for
	the '--showformat' option. Update '-l' example. Lower case program
	name in title header.

2006-01-26  Christoph Maser  <cm@financial.com>

	* utils/start-stop-daemon.c (do_help): Fix typo.

2006-01-26  A Costa  <agcosta@gis.net>

	* man/C/dselect.1: Fix typos.

2006-01-26  Bastian Kleineidam  <calvin@debian.org>

	* man/C/dpkg.1: Document the --no-debsig option.

2006-01-26  Marc Haber  <mh+debian-packages@zugschlus.de>

	* man/C/dpkg-statoverride.8: Fix typo.

2006-01-24  Frank Lichtenheld  <djpig@debian.org>

	* debian/control:
	(Section) dpkg and dselect are now in section admin,
	not section base. Correct info in the control file.
	(Standards-Version) Bump Standards-Version to 3.6.2 (no
	changes).

	* man/C/dpkg-architecture.1: Fix typo.

2006-01-23  Vasilis Vasaitis  <v.vasaitis@sms.ed.ac.uk>
