@@ -5,7 +5,10 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
   
   [ Frank Lichtenheld ]
   * Let dpkg-source ignore comments in the hunk header as used by
-  diff -p (Anand Kumria). Closes: #344880
+    diff -p (Anand Kumria). Closes: #344880
+  * Let dpkg-buildpackage create a .changes file even if signing the
+    .dsc file failed. This makes it easier to just sign the package
+    later (Julian Gilbey). Closes: #217963
 
  -- Guillem Jover <guillem@debian.org>  Sun, 29 Jan 2006 06:02:58 +0200
 
